# patterns_book

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run_lints.sh  run_tests.sh  test_model.py
patterns_book/: conftest.py  db_tables.py  flask_app.py  main.py  model.py  repository.py  services.py  settings.py  test_model.py  test_repository.py  test_services.py
patterns_book/adapters/: db_tables.py  email.py  repository.py  sessions.py  unit_of_work.py
patterns_book/domain/: model.py
patterns_book/endpoints/: api.py
patterns_book/service/: message_bus.py  models.py  services.py
scripts/: init_db.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: conftest.py  test_concurrency.py  test_repository.py
tests/unit/: test_model.py  test_services.py  test_unit_of_work.py
