[project]
name = "patterns-book"
version = "0.1.0"
description = ""
authors = [
    {name = "knseravin",email = "knseravin@sberbank.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
mypy = "^1.18.2"
ruff = "^0.14.2"
